Add akka-remote proguard scripted test and sample