@@ -16,3 +16,5 @@ publishTo <<= (version) { v =>
 }
 
 ScriptedPlugin.scriptedSettings
+
+scriptedLaunchOpts := Seq("-Xms512m", "-Xmx512m", "-XX:MaxPermSize=256m")
